--- a/assets/main.css
+++ b/assets/main.css
@@ -122,7 +122,7 @@ nav a {
 
 
 .education {
-    background: url('images/educacion.jpg') no-repeat fixed;
+    background: url('../images/educacion.jpg') no-repeat fixed;
     background-size: cover;
 }
 
